docs(research): record PR 1 completion, correct the 21/25 validation claim
Why: SS16.4 asserted PR 1 would validate the compile-JDK-21/runtime-JDK-25
     incubator-module combination, but that claim was never actually
     tested on Zulu 25 -- only WSL JDK 21 was planned. Caught before
     shipping the claim as fact.
What: Added SS17 recording PR 1's completion (commit b78edf6): pom wiring,
      VectorCapabilities, full regression suite unchanged (274/36 tests).
      Ran the actual two-JVM validation this time -- built on WSL 21.0.11,
      copied the shaded jar to native Windows, exercised with/without
      --add-modules on Zulu 25.0.3. Both JVMs agree on graceful
      degradation and correct detection. The 21/25 claim is now
      evidence-backed rather than asserted.
Out of scope: PR 2 (Stage 1 SIMD implementation) -- not started, gated
      on re-parameterizing the microbenchmark to width 256 first.
Refs #218 Phase: 15 — nnue